--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "openrarity-node",
+  "name": "@mintify/openrarity-node",
   "version": "1.0.0",
   "description": "A Node.js package for calculating rarity using various attributes.",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.7.3",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
     "jest": "^29.7.0",
     "mathjs": "^13.0.3"
   },
@@ -16,12 +13,12 @@
     "test": "jest"
   },
   "keywords": [
+    "openrarity",
     "rarity",
     "calculator",
-    "node",
-    "express"
+    "node"
   ],
-  "author": "Your Name",
+  "author": "kakashigr",
   "repository": {
     "type": "git",
     "url": "https://github.com/Mintify-Inc/openrarity-node.git"
